@@ -6,6 +6,7 @@ Changelog
 
  * Fix: When editing a document link in rich text, the document ID is no longer erroneously interpreted as a page ID (Stephen Rice)
  * Fix: Removing embedded media from rich text by mouse click action now gets correctly registered as a change to the field (Loic Teixeira)
+ * Fix: Rich text editor is no longer broken in InlinePanels (Matt Westcott, Yann Fouillat)
 
 
 1.5 (31.05.2016)
